syntax = "proto3";

option csharp_namespace = "PetKeeperMobileApp";

package address;

import "Protos/shared.proto";

service AddressService {
	rpc CreateAddress (shared.AddressCreate) returns (AddressMinimal);
    rpc GetUserAddresses (AddressGet) returns (AddressList);
    rpc UpdateAddress (AddressUpdate) returns (AddressUpdate);
    rpc DeleteAddress (AddressMinimal) returns (AddressMinimal);
}

message AddressMinimal {
    string id = 1;
    string owner_id = 2;
}

message AddressGet {
    optional string id = 1;
    optional string street = 2;
    optional string house_number = 3;
    optional string city = 4;
    optional string post_code = 5;
    optional bool is_primary = 6;
    optional string owner_id = 7;
}

message AddressList {
    repeated shared.AddressCreate addresses = 1;
}

message AddressUpdate {
    string id = 1;
    optional string street = 2;
    optional string house_number = 3;
    optional string apartment_number = 4;
    optional string city = 5;
    optional string post_code = 6;
    optional bool is_primary = 7;
}